# WaseemBrain

./: .env.example  .gitattributes  .gitignore  01_PHYSICS_AND_REASONING.md  02_ARCHITECTURE_OVERVIEW.md  03_COMPONENTS_DEEP_DIVE.md  05_PROJECT_STRUCTURE.md  06_MASTER_BUILD_PROMPT.md  ALGORITHMIC_BRAIN_PLAN.md  CHANGELOG.md  CITATION.cff  COMPLETE_STRUCTURE_AND_DETAILS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DESCRIPTION.md  LICENSE  LICENSE.md  Makefile  NOTICE.md  PLAN.md  QUICKFIX.ps1  README.md  SECURITY.md  SETUP.md  SETUP_STATUS.md  TOPICS.txt  api_server.py  chat.txt  docker-compose.yml  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements-training.txt  requirements.txt  (+10 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  main.yml
.tmp_test/: vector_store_copy.py
.tmp_test/sqlite-migration/: metadata.db
.tmp_test/sqlite-search-text/: metadata.db
.tmp_test/vector-capacity/: memory.index  metadata.db
.tmp_test/vector-repro/: metadata.db
.tmp_test/vector-stale/: memory.index.snapshot  metadata.db
.tmp_test/vector-stale-fixed/: memory.index  metadata.db
.tmp_test/vector-store-basic/: metadata.db
.tmp_test/vector-store-capacity/: metadata.db
.tmp_test/vector-store-forced-json/: metadata.db
.tmp_test/vector-store-stale-index/: metadata.db
agent-v2/: Makefile  README.md  agent-v2.opam  dune-project  txt
agent-v2/lib/: agent.ml  agent.mli  agent_real.ml  agent_real.mli  dune
agent-v2/test/: dune  test_agent.ml
agent-v3/: Cargo.toml  LICENSE  NOTICE  README.md
agent-v3/src/: actions.rs  agent.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  messaging.rs  protection.rs  runtime.rs  types.rs
agents_and_runners/: build_system.py  code_executor.py  code_generator.py  feedback_loop.py  health_check.py  learning_engine.py  proof_test.py  quality_validator.py  reasoning_engine.py  run_all_professional.py  run_all_tests.py  run_complete_system.py  run_super_agent.py  runtime_bridge.py  safety_protocols.py  test_coding_proof.py  test_creative_code.py  test_suite.py  validate_quality.py  voice_integration.py  waseem_agent.py  waseem_agent_v2.py  waseem_complete_system.py  waseem_orchestrator.py
brain/: __init__.py  bootstrap.py  code_symbols.py  config.py  coordinator.py  dialogue.py  exceptions.py  locale.py  runtime.py  security.py  session.py  types.py
brain/assistant/: __init__.py  actions.py  local_responder.py  orchestrator.py  providers.py  types.py
brain/emotion/: __init__.py  fusion.py  text_encoder.py  voice_encoder.py
brain/experts/: __init__.py  advanced_features.py  assembler.py  ast_coder.py  expert.py  integration_layer.py  pool.py  registry.py  system_ops.py  types.py
brain/helpers/: __init__.py  common.py  decorators.py  errors.py  formatting.py  logger.py  testing.py  timing.py  validation.py
brain/internet/: __init__.py  fetcher.py  module.py  search.py  types.py
brain/knowledge/: __init__.py  knowledge_datasets.py
brain/learning/: __init__.py  corrector.py  features.py  feedback.py  loop.py  policy.py  scorer.py  types.py
brain/memory/: __init__.py  embedder.py  graph.py  sqlite_store.py  vector_store.py
brain/normalizer/: __init__.py  base.py  document_adapter.py  text_adapter.py  url_adapter.py  voice_adapter.py
brain/quality/: __init__.py  quality_evaluator.py
brain/reasoning/: __init__.py  chain_of_thought.py  logical_inference.py
brain/router/: __init__.py  client.py  exporter.py  labeler.py  model.py  trainer.py
data/: urdu_tech_dictionary.md
data/expert_feedback/: feedback_history.json  knowledge_updates.json
data/feedback/: feedback_202604.jsonl
data/learned_knowledge/: insights.json  patterns.json  strategies.json
data/router/: training.jsonl
docker/: Dockerfile.node  Dockerfile.python
docs/: CAPABILITY_MATRIX.md  INDUSTRIAL_REBUILD_PLAN.md  README.md  api.md  architecture.md  build.md  components.md  testing.md
experts/: knowledge-manifest.json  registry.json  response-policy.json  router-samples.jsonl  router.json
experts/base/: advanced_security_expert.py  algorithms_expert.py  cryptography_expert.py  cybersecurity_expert.py  devops_expert.py  engineering_expert.py  ml_ai_expert.py  security_audit_expert.py
logs/: chat-1.md  chat.txt  knowledge_evolution_report.json  project_report.json  project_report.md  safety_audit.jsonl  test_output.txt  waseem_agent_state.json  waseem_agent_v2_state.json  waseem_complete_system_state.json  waseem_orchestrator_state.json
router-daemon/: Cargo.toml  build.rs  router_service.py
router-daemon/proto/: router.proto
router-daemon/src/: expert_loader.rs  main.rs  metrics.rs  router.rs  session.rs
scripts/: QUICKFIX.ps1  annotate_generated_js.mjs  attach_project.py  benchmark.py  build.bat  build_dist.mjs  build_knowledge_store.py  bundle_industrial.py  chat_cli.py  coordinator_bridge.py  create_expert.py  dev.mjs  diagnose_backends.py  docker_smoke.py  download_models.py  evolve_knowledge.py  export_expert.py  generate_router_stubs.py  guard_no_placeholders.py  init_db.py  inspect_memory.py  label_data.py  launch_terminal.mjs  manage_router_daemon.py  manage_runtime_daemon.py  prepare_runtime.py  project_report.py  run.bat  run_python.mjs  runtime_client.py  runtime_daemon.py  start_backend.bat  start_interface.bat  sync_codex_skills.py  sync_workspace_metadata.py  test_coverage.bat  test_professional.bat  test_quick.bat  test_rust.ps1  train_response_policy.py  (+2 more)
skills/: README.md  component-01-shared-types.md  component-02-input-normalizer.md  component-03-dialogue-state.md  component-03-emotion-encoder.md  component-04-memory-graph.md  component-05-micro-expert-pool.md  component-05-reasoning-modules.md  component-06-internet-module.md  component-06-learning-pipeline.md  component-07-decision-engine.md  component-08-interface-bridge.md  component-09-quality-gates.md
waseem_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+129 files in other folders)
