[project]
name = "waseem-brain"
version = "0.1.0"
description = "Offline-first multimodal brain runtime for memory, routing, typed experts, and deployable web delivery."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Muhammad Waseem Akram" }]
license = { file = "LICENSE.md" }
dependencies = []
classifiers = ["License :: Other/Proprietary License"]

[project.optional-dependencies]
runtime = [
  "faster-whisper>=0.10.0",
  "feedparser>=6.0.11",
  "grpcio>=1.60.0",
  "hnswlib>=0.8.0",
  "httpx[http2]>=0.26.0",
  "langdetect>=1.0.9",
  "librosa>=0.10.0",
  "loguru>=0.7.2",
  "numpy>=1.26.0",
  "onnxruntime>=1.17.0",
  "openpyxl>=3.1.2",
  "pandas>=2.2.0",
  "pillow>=10.2.0",
  "protobuf>=4.25.0",
  "pydantic>=2.6.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "prompt_toolkit>=3.0.43",
  "scikit-learn>=1.3.0",
  "soundfile>=0.12.0",
  "tenacity>=8.2.3",
  "trafilatura>=1.8.0",
  "vaderSentiment>=3.3.2",
  "duckduckgo-search>=5.3.0",
]
dev = [
  "black>=23.0.0",
  "flake8>=6.1.0",
  "mypy>=1.10.0",
  "pylint>=2.17.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.0.0",
  "pytest-httpx>=0.30.0",
  "respx>=0.21.0",
  "ruff>=0.5.0",
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
]
training = [
  "datasets>=2.16.0",
  "grpcio-tools>=1.60.0",
  "onnx>=1.20.1",
  "optimum[onnxruntime]>=1.16.0",
  "peft>=0.8.0",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=2.4.0",
  "torch>=2.1.0",
  "transformers>=4.37.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]
"tests/python/*.py" = ["E501"]
"tests/python/test_router_grpc.py" = ["N802"]
"brain/router/generated/*.py" = ["ALL"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
packages = ["brain"]

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["brain.router.generated.*"]
ignore_errors = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.md", "NOTICE.md"]

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*", "experts*", "router_daemon*"]
exclude = ["tests*", "interface*", "assets*", "data*", "docs*", "logs*", "node_modules*", "target*", "tmp*", "agents_and_runners*"]
namespaces = true


