[package]
name = "router-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
memmap2 = "0.9"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
thiserror = "1"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
